# junit-ci

./: .gitignore  .rusty-hook.toml  Cargo.toml  README.md  default.nix  dummy.xml  flake.nix  no-tests.xml  no-top-node.xml  sample.xml  shell.nix
.github/ISSUE_TEMPLATE/: default.md
.github/workflows/: issue-branch.yml
src/: main.rs
test/: mixed-nodes.xml  multi-top-node.xml
