[package]
name = "junit-ci"
version = "0.1.0"
edition = "2021"
authors = [ "Ariel Richtman <ariel@richtman.com.au>" ]
license = "GPL-3.0-or-later"
description = "CLI utility to return error codes depending on jUnit result files."
homepage = "https://github.com/arichtman/junit-ci"
repository = "https://github.com/arichtman/junit-ci"
keywords = [ "cli", "junit", "ci", "xml", "report" ]
categories = [ "command-line-utilities", "text-processing", "development-tools" ]

[dependencies]
log = "0.4.17"
simple_logger = "4.0.0"
junit-parser = "0.2.0"

[dependencies.clap]
version = "4.0.*"
features = ["derive"]

[dev-dependencies]
rusty-hook = "0.11.2"

